# stack-lang

./: CMakeLists.txt
example/: fib.sl
include/: err.hpp  eval.hpp  generator.hpp  log.hpp  parser.hpp  syntax.hpp  util.hpp
src/: err.cpp  eval.cpp  generator.cpp  main.cpp  parser.cpp  test.cpp
